fix: docker file startup and health check