@@ -1,3 +1,4 @@
-FROM java:8-alpine
+FROM openjdk:11
 ADD target/squote.jar /app.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar","-Xmx1024m -XX:+UseConcMarkSweepGC"]
+HEALTHCHECK --interval=30s --timeout=300s --retries=3 CMD curl -sS http://localhost:8091 || exit 1
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Xmx1g","-Xlog:gc","-jar","/app.jar"]
